# Miranda

./: LICENSE  README.md
miranda/neuralnine_virtual_assistant/: intents.json  pyproject.toml  test_model.h5  test_model_classes.pkl  test_model_words.pkl
miranda/neuralnine_virtual_assistant/neuralnine_virtual_assistant/: custom_intent_methods.py  main.py  virtual_assistant.py
miranda/neuralnine_virtual_assistant/tests/: test_neuralnine_virtual_assistant.py
miranda/virtual_assistant/: README.md  pyproject.toml
miranda/virtual_assistant/tests/: test_virtual_assistant.py
miranda/virtual_assistant/virtual_assistant/: virtual_assisant.py
miranda/virtual_assistant/virtual_assistant/assistant_functions/: open_browser.py  speak_listen.py
miranda/virtual_assistant/virtual_assistant/intent_classification/: intent_classification.py
miranda/virtual_assistant_2/: pyproject.toml
miranda/virtual_assistant_2/tests/: test_virtual_assistant_2.py
miranda/virtual_assistant_2/virtual_assistant_2/: main.py
