[tool.poetry]
name = "neuralnine_virtual_assistant"
version = "0.1.0"
description = ""
authors = ["Nikolai McFall <nikolai.mcfall@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
tensorflow = "^2.8.0"
nltk = "^3.7"
SpeechRecognition = "^3.8.1"
pyttsx3 = "^2.90"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
