[tool.poetry]
name = "virtual_assistant"
version = "0.1.0"
description = ""
authors = ["Nikolai McFall <nikolai.mcfall@gmail.com>", "Wentao He <wentao0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
