[tool.poetry]
name = "virtual_assistant"
version = "0.1.0"
description = ""
authors = ["Nikolai McFall <nikolai.mcfall@gmail.com>", "Wentao He <wentao0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pvporcupine = "^2.1.2"
geocoder = "^1.38.1"
pyttsx3 = "^2.90"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
