[tool.poetry]
name = "virtual_assistant_2"
version = "0.1.0"
description = ""
authors = ["Wentao He <wentao0813@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.6.0"
beautifulsoup4 = "^4.10.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
comtypes = "^1.1.11"
idna = "^3.3"
MouseInfo = "^0.1.3"
Pillow = "^9.0.1"
PyAudio = "^0.2.11"
PyAutoGUI = "^0.9.53"
pycodestyle = "^2.8.0"
PyGetWindow = "^0.0.9"
PyMsgBox = "^1.0.9"
pyperclip = "^1.8.2"
PyRect = "^0.2.0"
PyScreeze = "^0.1.28"
python-decouple = "^3.6"
pyttsx3 = "^2.90"
pytweening = "^1.0.4"
pywhatkit = "^5.3"
requests = "^2.27.1"
soupsieve = "^2.3.1"
SpeechRecognition = "^3.8.1"
toml = "^0.10.2"
urllib3 = "^1.26.9"
wikipedia = "^1.4.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
