[tool.poetry]
name = "virtual_assistant_2"
version = "0.1.0"
description = ""
authors = ["Wentao He <wentaohe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SpeechRecognition = "^3.8.1"
pyttsx3 = "^2.90"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
